--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.11",
+    "@ng-select/ng-select": "^14.7.0",
     "@stripe/stripe-js": "^3.5.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
